Fix product logo alignment issue

--- a/modules/theme/src/theme-core/definitions/globals/product.less
+++ b/modules/theme/src/theme-core/definitions/globals/product.less
@@ -58,6 +58,12 @@ body {
                 background-color: @secondaryColor !important;
             }
         }
+        
+        &.absolute {
+            position: absolute;
+            top: @productVersionLabelAbsoluteTop;
+            right: @productVersionLabelAbsoluteRight;
+        }
     }
     .product-logo {
         width: @productLogoWidth;
